crates/reinhardt-urls/crates/routers-macros/tests/ui/empty_parameter_name.rs
use reinhardt_routers_macros::path;

fn main() {
	// Error: empty parameter name
	let _path = path!("/users/{}/");
}
